--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="./stylesheets/style.css" />
   <title>Fitness Tracker</title>
 </head>
 
@@ -24,26 +24,31 @@
         <div class="prev-workout">
           <h3>Last Workout</h3>
           <div>
+            <!-- need to add workout stats here -->
             <div class="workout-stats"></div>
             <div class="buttons">
+              <!-- this should let me add on to an existing workout -->
               <a id="continue-btn" href="/exercise?" class="huge ui blue button">Continue Workout</a>
               <a href="/exercise" class="huge positive ui button">New Workout</a>
             </div>
           </div>
         </div>
         <div class="new-workout">
+          <!-- what does this do? -->
           <h3>Create Your First Workout</h3>
         </div>
       </div>
     </div>
   </div>
   </div>
+  <!-- when is this triggered? -->
   <div id="toast">
     Workout Added Successfully!
   </div>
-  <script src="/api.js"></script>
-  <script src="/workout.js"></script>
-  <script src="/index.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <script src="./js/api.js"></script>
+  <script src="./js/workout.js"></script>
+  <script src="./js/index.js"></script>
 </body>
 
 </html>
