--- a/public/exercise.html
+++ b/public/exercise.html
@@ -82,6 +82,7 @@
   <div id="toast">
     Workout Added Successfully!
   </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <script src="./js/api.js"></script>
   <script src="./js/exercise.js"></script>
 </body>
